# flask_todo_app

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.db  models.py  views.py
app/templates/: index.html
migrations/versions/: af8c3b258ec2_.py
