[tool.poetry]
name = "flask_todo_app"
version = "0.1.0"
description = ""
authors = ["Marcelo Marcon <marcelo.marcon@ax4b.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
flask-shell = "^0.1.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
black = "^21.12b0"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
